Implement job streaming
